hot reload kinda works

--- a/personalwebsite/frontend/assets/bundles/public/style.css
+++ b/personalwebsite/frontend/assets/bundles/public/style.css
@@ -3163,32 +3163,32 @@ nav {
 
 @font-face {
   font-family: "Roboto";
-  src: local(Roboto Thin), url(dfe56a876d0282555d1e2458e278060f.eot);
-  src: url(dfe56a876d0282555d1e2458e278060f.eot?#iefix) format("embedded-opentype"), url(954bbdeb86483e4ffea00c4591530ece.woff2) format("woff2"), url(7500519de3d82e33d1587f8042e2afcb.woff) format("woff"), url(94998475f6aea65f558494802416c1cf.ttf) format("truetype");
+  src: local(Roboto Thin), url(http://localhost:3000/assets/bundlesdfe56a876d0282555d1e2458e278060f.eot);
+  src: url(http://localhost:3000/assets/bundlesdfe56a876d0282555d1e2458e278060f.eot?#iefix) format("embedded-opentype"), url(http://localhost:3000/assets/bundles954bbdeb86483e4ffea00c4591530ece.woff2) format("woff2"), url(http://localhost:3000/assets/bundles7500519de3d82e33d1587f8042e2afcb.woff) format("woff"), url(http://localhost:3000/assets/bundles94998475f6aea65f558494802416c1cf.ttf) format("truetype");
   font-weight: 200; }
 
 @font-face {
   font-family: "Roboto";
-  src: local(Roboto Light), url(a990f611f2305dc12965f186c2ef2690.eot);
-  src: url(a990f611f2305dc12965f186c2ef2690.eot?#iefix) format("embedded-opentype"), url(69f8a0617ac472f78e45841323a3df9e.woff2) format("woff2"), url(3b813c2ae0d04909a33a18d792912ee7.woff) format("woff"), url(46e48ce0628835f68a7369d0254e4283.ttf) format("truetype");
+  src: local(Roboto Light), url(http://localhost:3000/assets/bundlesa990f611f2305dc12965f186c2ef2690.eot);
+  src: url(http://localhost:3000/assets/bundlesa990f611f2305dc12965f186c2ef2690.eot?#iefix) format("embedded-opentype"), url(http://localhost:3000/assets/bundles69f8a0617ac472f78e45841323a3df9e.woff2) format("woff2"), url(http://localhost:3000/assets/bundles3b813c2ae0d04909a33a18d792912ee7.woff) format("woff"), url(http://localhost:3000/assets/bundles46e48ce0628835f68a7369d0254e4283.ttf) format("truetype");
   font-weight: 300; }
 
 @font-face {
   font-family: "Roboto";
-  src: local(Roboto Regular), url(30799efa5bf74129468ad4e257551dc3.eot);
-  src: url(30799efa5bf74129468ad4e257551dc3.eot?#iefix) format("embedded-opentype"), url(2751ee43015f9884c3642f103b7f70c9.woff2) format("woff2"), url(ba3dcd8903e3d0af5de7792777f8ae0d.woff) format("woff"), url(df7b648ce5356ea1ebce435b3459fd60.ttf) format("truetype");
+  src: local(Roboto Regular), url(http://localhost:3000/assets/bundles30799efa5bf74129468ad4e257551dc3.eot);
+  src: url(http://localhost:3000/assets/bundles30799efa5bf74129468ad4e257551dc3.eot?#iefix) format("embedded-opentype"), url(http://localhost:3000/assets/bundles2751ee43015f9884c3642f103b7f70c9.woff2) format("woff2"), url(http://localhost:3000/assets/bundlesba3dcd8903e3d0af5de7792777f8ae0d.woff) format("woff"), url(http://localhost:3000/assets/bundlesdf7b648ce5356ea1ebce435b3459fd60.ttf) format("truetype");
   font-weight: 400; }
 
 @font-face {
   font-family: "Roboto";
-  src: url(4d9f3f9e5195e7b074bb63ba4ce42208.eot);
-  src: url(4d9f3f9e5195e7b074bb63ba4ce42208.eot?#iefix) format("embedded-opentype"), url(574fd0b50367f886d359e8264938fc37.woff2) format("woff2"), url(fc78759e93a6cac50458610e3d9d63a0.woff) format("woff"), url(894a2ede85a483bf9bedefd4db45cdb9.ttf) format("truetype");
+  src: url(http://localhost:3000/assets/bundles4d9f3f9e5195e7b074bb63ba4ce42208.eot);
+  src: url(http://localhost:3000/assets/bundles4d9f3f9e5195e7b074bb63ba4ce42208.eot?#iefix) format("embedded-opentype"), url(http://localhost:3000/assets/bundles574fd0b50367f886d359e8264938fc37.woff2) format("woff2"), url(http://localhost:3000/assets/bundlesfc78759e93a6cac50458610e3d9d63a0.woff) format("woff"), url(http://localhost:3000/assets/bundles894a2ede85a483bf9bedefd4db45cdb9.ttf) format("truetype");
   font-weight: 500; }
 
 @font-face {
   font-family: "Roboto";
-  src: url(ecdd509cadbf1ea78b8d2e31ec52328c.eot);
-  src: url(ecdd509cadbf1ea78b8d2e31ec52328c.eot?#iefix) format("embedded-opentype"), url(39b2c3031be6b4ea96e2e3e95d307814.woff2) format("woff2"), url(dc81817def276b4f21395f7ea5e88dcd.woff) format("woff"), url(e31fcf1885e371e19f5786c2bdfeae1b.ttf) format("truetype");
+  src: url(http://localhost:3000/assets/bundlesecdd509cadbf1ea78b8d2e31ec52328c.eot);
+  src: url(http://localhost:3000/assets/bundlesecdd509cadbf1ea78b8d2e31ec52328c.eot?#iefix) format("embedded-opentype"), url(http://localhost:3000/assets/bundles39b2c3031be6b4ea96e2e3e95d307814.woff2) format("woff2"), url(http://localhost:3000/assets/bundlesdc81817def276b4f21395f7ea5e88dcd.woff) format("woff"), url(http://localhost:3000/assets/bundlese31fcf1885e371e19f5786c2bdfeae1b.ttf) format("truetype");
   font-weight: 700; }
 
 a {
