--- a/personalwebsite/frontend/assets/scss/example/example.scss
+++ b/personalwebsite/frontend/assets/scss/example/example.scss
@@ -1,21 +1,7 @@
-#banner {
-    img {
-        width: 40%;
-    }
-}
-#banner-footer {
-    div {
-        div {
-            margin-bottom: 0px;
-        }
-    }
-}
 
-#main-content {
-    margin-top: 4em;
-}
+@import '../materialize/sass/components/_color.scss';
+@import '../materialize/sass/components/_variables.scss';
 
-.divider {
-    margin-top: 4em;
-    margin-bottom: 4em;
+body {
+    background-color: $primary-color;
 }
