--- a/personalwebsite/frontend/assets/scss/materialize/sass/components/_variables.scss
+++ b/personalwebsite/frontend/assets/scss/materialize/sass/components/_variables.scss
@@ -33,11 +33,12 @@
 /* 1. Colors
    ========================================================================== */
 
-$primary-color: color("blue", "lighten-2") !default;
+$brand-color: #163b16;
+$primary-color: color($brand-color, "lighten-2") !default;
 $primary-color-light: lighten($primary-color, 15%) !default;
 $primary-color-dark: darken($primary-color, 15%) !default;
 
-$secondary-color: color("blue", "darken-1") !default;
+$secondary-color: color($brand-color, "darken-1") !default;
 $success-color: color("green", "base") !default;
 $error-color: color("red", "base") !default;
 $link-color: color("light-blue", "darken-1") !default;
